@@ -16,6 +16,7 @@ AC_CONFIG_MACRO_DIR([../../m4])
 KPSE_BASIC([lua53])
 
 AC_PROG_CC
+AC_PROG_CC_C99
 AC_PROG_RANLIB
 AC_PROG_LN_S
 
