@@ -1,1 +1,1 @@
-#define luatex_svn_revision 7018
+#define luatex_svn_revision 7047
